--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -20,6 +20,9 @@
         android:id="@+id/settings"
         android:title="Settings"
         />
+    <item
+        android:id="@+id/nav_profile"
+        android:title="My Profile"/>
 
     <item android:title="Profile">
         <menu>
@@ -29,10 +32,7 @@
                     android:title="@string/login"
                     android:icon="@drawable/login"
                    />
-                <item
-                    android:id="@+id/nav_profile"
-                    android:title="@string/menu_profile"
-                    android:icon="@drawable/profile"/>
+
                 <item
                     android:id="@+id/nav_logout"
                     android:title="@string/logout"
