--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -130,7 +130,7 @@
         <ImageView
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:src="@drawable/ic_location"
+            android:src="@drawable/ic_lcation"
             android:layout_marginLeft="70dp"/>
 
         <TextView
